build out nav and welcome controller

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,14 @@
 </head>
 <body>
 
+  <%= link_to "home", root_path%>
+  <%= link_to "about us", welcome_about_path%>
+  <%= link_to "features", welcome_features_path%>
+  <%= link_to "contact", welcome_contact_path%>
+  <%= link_to "faqs", welcome_faq_path%>
+  <%= link_to "invoices", invoices_path%>
+  <%= link_to "login", welcome_login_path%>
+
 <%= yield %>
 
 </body>
