modified nav and add bootstrap

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,16 +7,17 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-  <%= link_to "home", root_path%>
-  <%= link_to "about us", welcome_about_path%>
-  <%= link_to "features", welcome_features_path%>
-  <%= link_to "contact", welcome_contact_path%>
-  <%= link_to "faqs", welcome_faq_path%>
-  <%= link_to "invoices", invoices_path%>
-  <%= link_to "login", welcome_login_path%>
-
-<%= yield %>
-
+<div class="container">
+  <ul class = "nav nav-tabs">
+    <li><%= link_to "home", root_path%></li>
+    <li><%= link_to "about us", welcome_about_path%></li>
+    <li><%= link_to "features", welcome_features_path%></li>
+    <li><%= link_to "contact", welcome_contact_path%></li>
+    <li><%= link_to "faqs", welcome_faq_path%></li>
+    <li><%= link_to "invoices", invoices_path%></li>
+    <li><%= link_to "login", welcome_login_path%></li>
+  </ul>
+  <%= yield %>
+</div>
 </body>
 </html>
