--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,9 +15,20 @@
     <li><%= link_to "contact", welcome_contact_path%></li>
     <li><%= link_to "faqs", welcome_faq_path%></li>
     <li><%= link_to "invoices", invoices_path%></li>
-    <li><%= link_to "login", welcome_login_path%></li>
+    
+    <% if current_user %>
+      <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete%></li>
+    <% else %>
+      <li><%= link_to "Sign Up", new_user_registration_path%></li>
+      <li><%= link_to "Sign In", new_user_session_path%></li>
+    <% end %>
   </ul>
+  
+  <p class="notice"><%= notice %></p>
+  <p class="alert"><%= alert %></p>
+  
   <%= yield %>
+  
 </div>
 </body>
 </html>
